kubernetes/sportsbook.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportsbook
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sportsbook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sportsbook
spec:
  selector:
    matchLabels:
      app: sportsbook
  replicas: 1
  template:
    metadata:
      labels:
        app: sportsbook
    spec:
      containers:
      - name: sportsbook
        image: koodikindral/api:sportsbook
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      imagePullSecrets:
      - name: dockerhub
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings
