kubernetes/wallet.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wallet
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet
spec:
  selector:
    matchLabels:
      app: wallet
  replicas: 1
  template:
    metadata:
      labels:
        app: wallet
    spec:
      containers:
      - name: wallet
        image: koodikindral/api:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      imagePullSecrets:
      - name: dockerhub
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings
