kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - web.koodikindral.com
    - api.koodikindral.com
    secretName: letsencrypt-prod
  rules:
  - host: web.koodikindral.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  - host: api.koodikindral.com
    http:
      paths:
      - backend:
          serviceName: wallet
          servicePort: 80
